src/App.scss
@import "./styles/variables.scss";

html {
  position: fixed;
  overflow: hidden;
}

body {
  font-family: $font2;
  box-sizing: border-box;
  background-color: rgb(226, 226, 234);
  margin: 0;
  width: 100vw;
  height: 100vh;
}

p {
  font-family: $font1;
  margin: 1rem auto;
  margin-bottom: 2rem;
  font-size: 1rem;
  text-align: center;
  color: $dark1;

  a {
    color: $dark1;
  }
}

.p2 {
  color: $dark2;
}

h1 {
  font-size: 3.5rem;
  color: $dark2;
  text-align: center;
  margin: 2rem;
}

.footer {
  position: fixed;
  width: 100%;
  left: 0;
  bottom: 0;
}

@media screen and (min-width: 700px) {
  .h1 {
    font-size: 5rem;
  }
  p {
    font-size: 1.2rem;
  }
}

@media screen and (min-width: 321px) and (max-width: 699px) {
  h1 {
    font-size: 2.3rem;
  }
  p {
    font-size: 0.8rem;
  }
}

@media screen and (max-width: 320px) {
  h1 {
    font-size: 1.2rem;
  }
  p {
    font-size: 0.8rem;
  }
}

